[gd_scene load_steps=4 format=3 uid="uid://dr1t3444vuiws"]

[ext_resource type="Script" path="res://TW/TW.gd" id="1_leflx"]
[ext_resource type="PackedScene" uid="uid://cbehqu0dsca77" path="res://minigames/minigame.tscn" id="2_m7cxr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_olar8"]

[node name="TW" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1.90401, 0, 0, 0, 2.25321, 0, 0, 0)
script = ExtResource("1_leflx")

[node name="minigame" parent="." instance=ExtResource("2_m7cxr")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_olar8")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
